Fix layout issues - containers for rows
Also, start showing the cached user list when clicking on the assign
button.  Still need to start showing the assign button when there
is no one assigned.

--- a/client/src/styles/widgets/_assign-users.scss
+++ b/client/src/styles/widgets/_assign-users.scss
@@ -1,3 +1,15 @@
 .assign-active {
   border: 1px solid $brand-primary !important;
 }
+
+.assign-user-list {
+  position: absolute;
+  top: 24px;
+  left: 0px;
+  border: 2px dashed $brand-primary;
+  max-height: 40rem;
+  width: 20rem;
+  background-color: white;
+  z-index: 1;
+  overflow-y: auto;
+}
